--- a/menu/templates/dashboard.html
+++ b/menu/templates/dashboard.html
@@ -67,7 +67,7 @@
                                  class="d-none d-sm-inline">Mis tareas</span></a>
                            </li>
                            <li>
-                              <a href="#" class="nav-link px-0"> <span
+                              <a href="{% url 'assign_task' %}" class="nav-link px-0"> <span
                                  class="d-none d-sm-inline"><i class="fas fa-clipboard-list"></i> Asignar tareas</span></a>
                            </li>
                         </ul>
