--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -53,5 +53,8 @@
     </div>
   </section>
 </form>
-<script src="{% static 'js/login_form.js' %}" crossorigin="anonymous"></script>
+
+<!-- Script para hacer una peticion AJAX y evitar que se recargue la pagina -->
+<!-- <script src="{% static 'js/login_form.js' %}" crossorigin="anonymous"></script> -->
+
 {% endblock %}
