--- a/tasks/templates/assign_task.html
+++ b/tasks/templates/assign_task.html
@@ -25,14 +25,111 @@
     {% endif %}
 
     <div class="text-end justify-conten-end">
-        <button type="button" class="btn btn-outline-primary btn-sm" data-bs-toggle="modal" data-bs-target="#exampleModal">
+        <button type="button" class="btn btn-outline-primary btn-sm" data-bs-toggle="modal" data-bs-target="#assignTask">
             Asignar tarea <i class="far fa-plus-square"></i> 
         </button>
     </div>
 		<div class="justify-content-center py-4">
 			<a class="text-decoration-none text-white btn btn-success btn-sm" href="{% url 'assign_task' %}">Refrescar <i class="fas fa-sync-alt"></i></a> 
 		</div>
+		<div class="modal fade justify-content-center" id="assignTask" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+			<div class="modal-dialog modal-dialog-scrollable" role="document">
+					<div class="modal-content">
+							<div class="modal-body">
+									<h3 class="lead">Asignar tarea <i class="fas fa-plus-circle"></i></h3>
+									<form action="{% url 'assign_new_task' %}" method="POST">
+											{% csrf_token %}
+											<div class="form-floating py-3">
+													<input class="form-control form-control-sm mb-2" name="taskName" type="text" id="taskName">
+													<label class="form-label" for="taskName">Nombre de la tarea</label>
+											</div>
+											<div class="form-floating py-3">
+													<input class="form-control form-control-sm mb-2" name="taskDescription" type="text" id="taskDescription">
+													<label class="form-label" for="taskDescription">Descripción</label>
+											</div>
+											<div class="form-floating py-3">
+													<select class="form-select" aria-label="Default select example" name="taskPriority" id="priority">
+															<option selected></option>
+															<option value="Normal">Normal</option>
+															<option value="Mediana">Mediana</option>
+															<option value="Alta">Alta</option>
+													</select>
+													<label for="priority" class="form-label">Prioridad de la tarea</label>
+											</div>
+											<div class="form-floating py-3">
+													<input class="form-control form-control-lg mb-2" name="taskStatus" type="text" id="taskStatus">
+													<label class="form-label" for="taskStatus">Estado</label>
+											</div>
+											<div class="form-floating py-3">
+												<select class="form-select" name="assignedTo" id="assignedTo">
+														<option selected></option>
+														{% for teamMember in teamMembers %}
+															<option value="{{teamMember.name}}">{{teamMember.name}}</option>
+														{% endfor %}
+												</select>
+												<label for="assignedTo" class="form-label">Asignar a</label>
+											</div>
+											<div class="form-floating py-3">
+												<select class="form-select" name="department" id="department">
+														<option selected></option>
+														{% for department in departments %}
+															<option value="{{department.name}}">{{department.name}}</option>
+														{% endfor %}
+												</select>
+												<label for="department" class="form-label">Departamento</label>
+											</div>
+											<div class="form-floating py-3">
+													<input class="form-control form-control-lg mb-2" name="dueDate" type="date" id="dueDate">
+													<label class="form-label" for="dueDate">Fecha limite</label>
+											</div>
+											<button type="submit" class="btn btn-outline-primary">Agregar tarea</button>
+									</form>
+							</div>
+							<div class="modal-footer">
+									<button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal">Cancelar</button>
+							</div>
+					</div>
+			</div>
+	</div>
+		<table class="table" style="width: 100%;">
+			<thead style="width: 100%;">
+				<tr>
+					<th>Nombre</th>
+					<th>Descripcion</th>
+					<th>Prioridad</th>
+					<th>Estado</th>
+					<th>Asignado a</th>
+					<th>Departamento</th>
+					<th>Fecha</th>
+					<th>Creacion</th>
+				</tr>
+			</thead>
+				<tbody>
+					{% for assignedtask in assignedTasks %}
+						<tr>
+							<td>{{assignedtask.title}}</td>
+							<td>{{assignedtask.description}}</td>
+							{% if assignedtask.priority == "Alta" %}
+								<td><span class="badge bg-danger rounded-pill">{{assignedtask.priority}}</span></td>
+							{% elif assignedtask.priority == "Mediana" %}
+								<td><span class="badge bg-warning rounded-pill">{{assignedtask.priority}}</span></td>
+							{% else %}
+								<td><span class="badge bg-success rounded-pill">{{assignedtask.priority}}</span></td>
+							{%endif %}
 
+							{% if assignedtask.status == "Activo" %}
+								<td><span class="badge bg-success rounded-pill">{{assignedtask.status}}</span></td>
+							{% else %}
+								<td><span class="badge bg-danger rounded-pill">{{assignedtask.status}}</span></td>
+							{% endif %}
+							<td>{{assignedtask.team_member}}</td>
+							<td>{{assignedtask.department}}</td>
+							<td>{{assignedtask.due_date}}</td>
+							<td>{{assignedtask.created_at}}</td>
+						</tr>
+					{% endfor %}
+				</tbody>
+		</table>
   
 		<script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 		{% block child_js_below_files %}
