se agrego todos los demos en formato gif en el readme del proyecto

--- a/tasks/templates/assign_task.html
+++ b/tasks/templates/assign_task.html
@@ -135,7 +135,7 @@
 															<label class="form-label" for="taskName">Nombre de la tarea</label>
 														</div>
 														<div class="form-floating py-3">
-															<input class="form-control form-control-sm mb-2" name="taskDescription" type="text" id="taskDescription">
+															<textarea class="form-control" name="taskDescription" id="taskDescription" cols="200" rows="200"></textarea>
 															<label class="form-label" for="taskDescription">Descripción</label>
 														</div>
 														<div class="form-floating py-3">
